--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "attrs>=25.4.0",
     "cattrs>=25.3.0",
     "click>=8.3.0",
+    "numpy>=1.26.0",
+    "soundfile>=0.12.0",
     "tabulate>=0.9.0",
 ]
 
