--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "bundle:quietjs": "tsx src/scripts/bundleQuietJs.ts"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -30,6 +31,7 @@
     "globals": "^16.5.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.48.0",
+    "tsx": "^4.19.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2",
