feat: working chat with WASM build and pipes

--- a/.gitignore
+++ b/.gitignore
@@ -191,6 +191,7 @@ dist-ssr/
 .DS_Store/
 
 # Builder and dev stuff
-/public/quietjs/
+/public/quietjs/*
+!/public/quietjs/quiet.js
 /localhost.pem
 /localhost-key.pem
