--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/quiet-js"]
 	path = vendor/quiet-js
-	url = https://github.com/quiet/quiet-js.git
+	url = https://github.com/moxon6/quiet-js.git
