--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "bundle:quietjs": "tsx src/scripts/bundleQuietJs.ts"
+    "bundle:quietjs": "tsx src/scripts/bundleQuietJs.ts",
+    "postinstall": "patch-package --patch-dir vendor/patches"
   },
   "dependencies": {
+    "@moxon6/quiet-js": "^0.0.9",
+    "@tanstack/react-query": "^5.90.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.28.0"
@@ -30,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jsdom": "^26.1.0",
+    "patch-package": "^8.0.1",
     "playwright": "^1.48.0",
     "tsx": "^4.19.2",
     "typescript": "~5.9.3",
