--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "express": "^5.1.0",
     "globals": "^16.5.0",
     "jsdom": "^26.1.0",
     "patch-package": "^8.0.1",
