--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "postinstall": "patch-package --patch-dir vendor/patches"
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@moxon6/quiet-js": "^0.0.9",
+    "@moxon6/quiet-js": "file:/home/diogenes/projects/github.com/quiet-js/build/moxon6-quiet-js-0.0.9.tgz",
     "@tanstack/react-query": "^5.90.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
